testsuite/tests/typecheck/should_fail/TyAppPat_Nonmatching.stderr

TyAppPat_Nonmatching.hs:8:6: error:
    • Couldn't match expected type ‘a’ with actual type ‘Int’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a. Maybe a -> Int
        at TyAppPat_Nonmatching.hs:7:1-21
    • In the pattern: Just @Int x
      In an equation for ‘foo’: foo (Just @Int x) = x
    • Relevant bindings include
        foo :: Maybe a -> Int (bound at TyAppPat_Nonmatching.hs:8:1)
